update find  with specification